<resources>
    <string name="app_name">Slog</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for the auth -->
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="dummy_date">16/09/2013 19:45:03</string>
    <string name="dummy_note_text">JHAJSHVJHBAHB hdfv hbw kjsh f qf blshdvb qiu b;SKv,db iq xn...</string>
    <string name="search_hint">Search text</string>

</resources>
